Fix XUL style attribute change regression by making |#ifdef MOZ_SVG| code the default, but moved elsewhere.  b=163481  r=bbaetz  sr=bryner